--- a/style.css
+++ b/style.css
@@ -104,6 +104,13 @@ h1 {
 	border-bottom: 2px solid var(--text-color);
 }
 
+@media (hover: none) {
+	.btn-delete,
+	.btn-edit {
+		opacity: 1;
+	}
+}
+
 .todo-item:hover .btn-delete,
 .todo-item:hover .btn-edit {
 	opacity: 0.5;
