--- a/style.css
+++ b/style.css
@@ -110,7 +110,7 @@ h1 {
 	opacity: 1;
 }
 
-@media (hover: none) {
+/* @media (hover: none) {
 	.todo-item .btn-delete,
 	.todo-item .btn-edit {
 		opacity: 1;
@@ -126,7 +126,7 @@ h1 {
 	.todo-item:hover .btn-edit {
 		opacity: 0.5;
 	}
-}
+} */
 
 .todo-item.checked {
 }
