--- a/style.css
+++ b/style.css
@@ -105,12 +105,24 @@ h1 {
 	z-index: 100;
 }
 
-.btn-delete,
-.btn-edit {
+.todo-item .btn-delete,
+.todo-item .btn-edit {
 	opacity: 1;
 }
 
-@media (hover: hover) {
+@media (hover: hover) and (pointer: fine) {
+	.todo-item .btn-delete,
+	.todo-item .btn-edit {
+		opacity: 0;
+	}
+
+	.todo-item:hover .btn-delete,
+	.todo-item:hover .btn-edit {
+		opacity: 0.5;
+	}
+}
+
+/* @media (hover: hover) {
 	.todo-item .btn-delete,
 	.todo-item .btn-edit {
 		opacity: 0;
@@ -119,7 +131,7 @@ h1 {
 	.todo-item:hover .btn-edit {
 		opacity: 0.5;
 	}
-}
+} */
 
 /* body.hasHover .btn-delete,
 body.hasHover .btn-edit {
