--- a/style.css
+++ b/style.css
@@ -22,34 +22,37 @@ body {
 }
 
 button,
-input {
+input,
+textarea {
 	border: none;
 	outline: none;
 	appearance: none;
 	background: transparent;
 }
 
+textarea {
+	resize: none;
+}
+
 .todo-app {
-	/* background: linear-gradient(to bottom, #2580d3, #e79ee9); */
 	background: linear-gradient(to bottom, #46549e, #89cbf0);
 	border-radius: 10px;
-	max-width: 500px;
+	width: 500px;
 	margin: 50px auto;
 	padding: 0 15px;
 	display: flex;
 	flex-direction: column;
-	/* align-items: center; */
 	justify-content: center;
-}
-
-.header {
-	padding: 35px 0;
 }
 
 h1 {
 	font-weight: 300;
 	font-size: 60px;
 	text-align: center;
+}
+
+.header {
+	padding: 35px 0;
 }
 
 .main {
@@ -75,13 +78,13 @@ h1 {
 	align-items: center;
 	background-color: #fff;
 	border-radius: 5px;
-	margin-bottom: 30px;
+	/* margin-bottom: 30px; */
 }
 
 .input-main {
 	width: 100%;
 	padding: 20px;
-	font-size: 28px;
+	font-size: 24px;
 	color: var(--input-color);
 }
 
@@ -91,6 +94,7 @@ h1 {
 }
 
 .todos-wrapper {
+	padding-top: 15px;
 	width: 95%;
 }
 
@@ -122,7 +126,6 @@ h1 {
 }
 
 .todo-item.checked {
-	animation: strike 1s ease-in-out;
 }
 
 .todo-item.deleting,
@@ -135,13 +138,26 @@ h1 {
 }
 
 .description {
-	display: flex;
-	flex-grow: 1;
-	word-wrap: break-word;
-	overflow-x: hidden;
 	color: var(--text-color);
-	cursor: default;
-	background: transparent;
+	display: inline-flex;
+	flex-wrap: wrap;
+	flex-grow: 1;
+	word-break: break-all;
+	overflow: hidden;
+	/* height: auto; */
+	/* cursor: default;
+	display: inline-block;
+	display: block;
+	flex-wrap: wrap;
+	flex-grow: 1;
+	word-wrap: break;
+	word-break: break-all;
+	overflow-x: hidden;
+	background: transparent; */
+}
+
+.description::placeholder {
+	color: var(--text-color);
 }
 
 /* BUTTONS */
@@ -220,12 +236,32 @@ h1 {
 	}
 }
 
-.btn-delete {
-	font-size: 28px;
-}
-
 .btn-edit {
 	font-size: 18px;
+}
+
+.btn-clear-all,
+.btn-clear-completed {
+	font-size: 18px;
+	font-weight: 400;
+	text-transform: uppercase;
+	color: var(--text-color);
+	padding: 5px 15px;
+	border-radius: 5px;
+	cursor: pointer;
+	transition: color 0.3s ease-out;
+}
+
+@media (hover: hover) and (pointer: fine) {
+	.btn-clear-all:hover,
+	.btn-clear-completed:hover {
+		outline: 1px solid var(--text-color);
+	}
+}
+
+.btn-clear-all:active,
+.btn-clear-completed:active {
+	transform: translateY(2px);
 }
 
 /* ICONS */
@@ -238,32 +274,12 @@ h1 {
 
 .fa-times {
 	font-size: 24px;
+	position: relative;
+	/* transform: translateY(-1px); */
+	transform: translateY(1px);
 }
 
-.btn-clear-all,
-.btn-clear-completed {
-	font-size: 18px;
-	font-weight: 400;
-	text-transform: uppercase;
-	color: var(--text-color);
-	padding: 5px 15px;
-	/* outline: 1px solid currentColor; */
-	border-radius: 5px;
-	cursor: pointer;
-	transition: color 0.3s ease-out;
-}
-
-@media (hover: hover) and (pointer: fine) {
-	.btn-clear-all:hover,
-	.btn-clear-completed:hover {
-		/* color: var(--input-color); */
-		outline: 1px solid var(--text-color);
-	}
-}
-
-.btn-clear-all:active {
-	transform: translateY(2px);
-}
+/* ANIMATION */
 
 @keyframes opacity {
 	from {
@@ -275,6 +291,8 @@ h1 {
 	}
 }
 
+/* MEDIAS */
+
 @media (max-width: 768px) {
 	h1 {
 		font-size: 48px;
@@ -285,6 +303,14 @@ h1 {
 	.todo-app {
 		/* max-width: 100%; */
 		width: 100%;
+	}
+
+	.todo-item {
+		gap: 10px;
+	}
+
+	.todo-count {
+		font-size: 18px;
 	}
 
 	.header {
@@ -305,6 +331,10 @@ h1 {
 	}
 
 	.input-main::placeholder {
+		font-size: 18px;
+	}
+
+	.description {
 		font-size: 18px;
 	}
 
