--- a/style.css
+++ b/style.css
@@ -140,20 +140,10 @@ h1 {
 .description {
 	color: var(--text-color);
 	display: inline-flex;
-	flex-wrap: wrap;
+	/* flex-wrap: wrap; */
 	flex-grow: 1;
 	word-break: break-all;
 	overflow: hidden;
-	/* height: auto; */
-	/* cursor: default;
-	display: inline-block;
-	display: block;
-	flex-wrap: wrap;
-	flex-grow: 1;
-	word-wrap: break;
-	word-break: break-all;
-	overflow-x: hidden;
-	background: transparent; */
 }
 
 .description::placeholder {
@@ -217,7 +207,7 @@ h1 {
 	opacity: 0.4;
 }
 
-.btn-complete:checked ~ .description {
+.btn-complete:checked ~ * {
 	text-decoration: line-through;
 	opacity: 0.5;
 }
