--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ textarea {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
+	box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 }
 
 h1 {
