--- a/style.css
+++ b/style.css
@@ -34,9 +34,6 @@ textarea {
 	resize: none;
 }
 
-
-
-
 .todo-app {
 	background: linear-gradient(to bottom, #46549e, #89cbf0);
 	border-radius: 10px;
@@ -98,8 +95,11 @@ h1 {
 }
 
 .todos-wrapper {
-	padding-top: 15px;
-	width: 95%;
+	/* padding-top: 15px;
+	width: 95%; */
+	padding: 15px 10px 0 10px;
+	flex: 1 1 100%;
+	width: 100%;
 }
 
 .todo-item {
@@ -171,7 +171,6 @@ h1 {
 @media (hover: hover) and (pointer: fine) {
 	.btn-add:hover {
 		filter: brightness(1.5);
-		
 	}
 }
 
@@ -183,7 +182,6 @@ h1 {
 	display: block;
 	margin-right: 20px;
 	font-size: 32px;
-	
 }
 
 .btn-complete {
@@ -270,12 +268,9 @@ h1 {
 	opacity: 1;
 }
 
-
 .btn-footer:active {
 	transform: translateY(2px);
 }
-
-
 
 @media (hover: hover) and (pointer: fine) {
 	.btn-clear-all:hover,
@@ -287,9 +282,8 @@ h1 {
 	.btn-active-tasks:hover,
 	.btn-completed-tasks:hover {
 		opacity: 1;
-		
+	}
 }
-
 /* ICONS */
 
 .fa-plus {
@@ -325,7 +319,19 @@ h1 {
 	}
 }
 
+@media (max-width: 450px) {
+	.footer__btns {
+		display: flex;
+		flex-direction: column;
+		gap: 10px;
+	}
+}
+
 @media (max-width: 400px) {
+	h1 {
+		font-size: 36px;
+	}
+
 	.todo-app {
 		/* max-width: 100%; */
 		width: 100%;
@@ -341,10 +347,6 @@ h1 {
 
 	.header {
 		padding: 25px 0;
-	}
-
-	h1 {
-		font-size: 40px;
 	}
 
 	.input-wrapper {
@@ -370,11 +372,5 @@ h1 {
 
 	.btn-filter {
 		padding: 5px;
-	}
-
-	.footer__btns {
-		display: flex;
-		flex-direction: column;
-		gap: 15px;
 	}
 }
