Fix footer buttons classname

--- a/style.css
+++ b/style.css
@@ -314,7 +314,7 @@ h1 {
 }
 
 @media (max-width: 450px) {
-	.footer__btns {
+	.footer-btns {
 		display: flex;
 		flex-direction: column;
 		gap: 10px;
